# turbulence-implicit-augmentation

./: .gitignore  LICENSE  README.md  main.sh  pyproject.toml  requirements.txt  run_spectra_evals.sh  run_train_samples_sweep.sh  sbatch_eval_barcode.sh  sbatch_eval_folder.sh  sbatch_train_samples_sweep.sh  sbatch_training_config.sh  sweeper.sh
configs/: SR_middle_cnn_3box_aug.yaml  SR_middle_cnn_3box_noaug.yaml  SR_middle_cnn_aug.yaml  SR_middle_cnn_noaug.yaml  SR_nearwall_cnn_3box_aug.yaml  SR_nearwall_cnn_3box_noaug.yaml  SR_nearwall_cnn_aug.yaml  SR_nearwall_cnn_noaug.yaml  boundary_single_timestep_1_box.yaml  boundary_single_timestep_1_box_augmented.yaml  boundary_single_timestep_3_boxes.yaml  midplane_single_timestep_1_box.yaml
dataset_creation/: filter_jhtb_data.py  get_jhtdb_data.py  get_jhtdb_data_5200.py  get_jhtdb_data_full_channel.py  sgs_filter_jhtb_data.py
plots/: paper_plot_spectra.py  plot_anisotropy.py  plot_example_SR.py  plot_results.py  process_results.py  visualize_full_channel.py  visualize_numpy_time_series.py
src/: __init__.py  analyze_dataset.py  data.py  eval.py  global_config.py  irreps_utils.py  models.py  rm_sanity_check.py  rm_test_basis.py  rm_test_equivariance.py  test_model.py  train.py  transformations.py  utils.py
tests/: ecnn_2nd_to_scalar_equivariant.yaml  ecnn_scalar_to_scalar_equivariant.yaml  ecnn_sgs_equivariant.yaml  ecnn_vector_to_vector_equivariant.yaml  equivariance_error.py  model_equivariance.py  test_basic_train_loop_runs.py  test_tensor_field_rotation.py  unique_octahedral_group.py
(+119 files in other folders)
